<resources>
    <string name="app_name">Singapore VPN</string>
    <string name="no_vpn_connected">Vpn status: Not connected</string>
    <string name="prompt_spinner">Select location</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="feedback">Feedback </string>
    <string name="ad_attribution">Ad</string>
    <string name="aboutus">About US</string>
    <string name="moreapp">More Apps</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="select_vpn_location">Available Free Server</string>
    <string name="facebook_app_id">299399755006063</string>

    <string name="search">Search here for region....</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="privacy">Privacy</string>
    <string name="rate">Rate US</string>
    <string name="home">Singapore VPN</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_inapp_link">https://github.com/librespeed/speedtest-android</string>

    <string name="privacy_policy">file:///android_asset/privacy_en.html</string>


    <string name="init_init">Loading</string>
    <string name="initFail_configError">Configuration error</string>
    <string name="initFail_retry">Retry</string>
    <string name="init_selecting">Selecting server</string>
    <string name="initFail_noServers">No servers available</string>
    <string name="serverSelect_message">Select a server</string>
    <string name="start">Start</string>
    <string name="test_dl">Download</string>
    <string name="test_ul">Upload</string>
    <string name="test_speedMeasure">Mbps</string>
    <string name="test_ping">Ping</string>
    <string name="test_jitter">Jitter</string>
    <string name="test_timeMeasure">ms</string>
    <string name="test_share">Share result</string>
    <string name="test_restart">New test</string>
    <string name="testFail_err">An error occurred</string>
    <string name="testFail_retry">Try again</string>
    <string name="privacy_open"><u>Privacy</u></string>
    <string name="privacy_close"><u>Back</u></string>
    <string name="speed_test">Speed Test</string>
    <string name="tap_region">Tap To Available Server</string>
</resources>
