<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


         <item
        android:id="@+id/rateapp_nav"
        android:icon="@drawable/a_rating"
        android:title="@string/rate" />
        <item
            android:id="@+id/shareapp_nav"
            android:icon="@drawable/a_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/privacypolicy_nav"
            android:icon="@drawable/a_privacy"
            android:title="@string/privacy" />
    <item
        android:id="@+id/aboutus_nav"
        android:icon="@drawable/a_about"
        android:title="@string/aboutus" />
    <item
        android:id="@+id/feedback_nav"
        android:icon="@drawable/a_feedback"
        android:title="@string/feedback" />



</menu>
